added build version

--- a/src/Message.Creator/Dockerfile
+++ b/src/Message.Creator/Dockerfile
@@ -1,4 +1,5 @@
 FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine AS build
+ARG BUILD_TAG=default
 WORKDIR /source
 
 # copy csproj and restore as distinct layers
@@ -11,4 +12,5 @@ RUN dotnet publish -c release -o /app --self-contained false --no-restore
 FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine
 WORKDIR /app
 COPY --from=build /app ./
+ENV VERSION=$BUILD_TAG
 ENTRYPOINT ["dotnet", "Message.Creator.dll"]
