added build version

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -38,9 +38,9 @@ jobs:
       - name: Build image
         run: |
           cd Message.Creator
-          docker build . --file Dockerfile --tag $CREATOR_IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}" --build-arg BUILD_TAG=${GITHUB_RUN_ID}"
+          docker build . --file Dockerfile --tag $CREATOR_IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}" --build-arg BUILD_TAG=${GITHUB_RUN_ID}
           cd ../Message.Receiver
-          docker build . --file Dockerfile --tag $RECEIVER_IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}" --build-arg BUILD_TAG=${GITHUB_RUN_ID}"
+          docker build . --file Dockerfile --tag $RECEIVER_IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}" --build-arg BUILD_TAG=${GITHUB_RUN_ID}
         
       - name: Log in to registry
         # This is where you will update the PAT to GITHUB_TOKEN
