--- a/component-templates/queue-template.yaml
+++ b/component-templates/queue-template.yaml
@@ -1,7 +1,7 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: pubsub
+  name: publisher
 spec:
   type: pubsub.azure.servicebus
   version: v1
