added open telemetry

--- a/src/Message.Creator/appsettings.json
+++ b/src/Message.Creator/appsettings.json
@@ -2,8 +2,20 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  },  
-  "AllowedHosts": "*"
+  },
+  "ApplicationInsights": {
+    "LogLevel": {
+      "Default": "Information"
+    }
+  },
+  "AllowedHosts": "*",
+  "UseTracingExporter": "otlp",
+  "UseMetricsExporter": "otlp",
+  "UseLogExporter": "otlp",
+  "AspNetCoreInstrumentation": {
+    "RecordException": "true"
+  }
 }
