--- a/src/Message.Receiver/Dockerfile
+++ b/src/Message.Receiver/Dockerfile
@@ -13,4 +13,5 @@ FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine
 WORKDIR /app
 COPY --from=build /app ./
 ENV VERSION=$BUILD_TAG
+ENV OTEL_DOTNET_AUTO_METRICS_ADDITIONAL_SOURCES="Message.Receiver"
 ENTRYPOINT ["dotnet", "Message.Receiver.dll"]
