--- a/src/Message.Receiver/appsettings.json
+++ b/src/Message.Receiver/appsettings.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "ApplicationInsights": {
@@ -10,5 +11,11 @@
       "Default": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "UseTracingExporter": "otlp",
+  "UseMetricsExporter": "otlp",
+  "UseLogExporter": "otlp",
+  "AspNetCoreInstrumentation": {
+    "RecordException": "true"
+  }
 }
