--- a/src/Message.Receiver/appsettings.json
+++ b/src/Message.Receiver/appsettings.json
@@ -17,5 +17,9 @@
   "UseLogExporter": "otlp",
   "AspNetCoreInstrumentation": {
     "RecordException": "true"
+  },
+  "Otlp": {
+    "ServiceName": "message-creator",
+    "Endpoint": "http://localhost:4317"
   }
 }
