--- a/src/Message.Receiver/appsettings.json
+++ b/src/Message.Receiver/appsettings.json
@@ -14,7 +14,7 @@
   "AllowedHosts": "*",
   "UseTracingExporter": "otlp",
   "UseMetricsExporter": "otlp",
-  "UseLogExporter": "otlp",
+  "UseLogExporter": "console",
   "AspNetCoreInstrumentation": {
     "RecordException": "true"
   },
