--- a/src/nginx/nginx.conf
+++ b/src/nginx/nginx.conf
@@ -1,7 +1,31 @@
-server {
-    listen 80;
+user  nginx;
+worker_processes  auto;
 
-    location /publish/ {
-        proxy_pass http://127.0.0.1:3500/v1.0/publish/publisher/queuename;
-    }
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
+
+
+events {
+    worker_connections  1024;
+}
+
+
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent $request_method "$upstream_addr" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    #tcp_nopush     on;
+
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    include /etc/nginx/conf.d/*.conf;
 }
